--- a/src/buttons.html
+++ b/src/buttons.html
@@ -23,6 +23,25 @@
             &nbsp;&nbsp;
             <button class="btn btn-purple"> purple</button>
         </div>
+
+        <!-- Rounded buttons -->
+
+        <div class="border-b pb-5 mt-5">
+            <h2 class="capitalize text-base mb-4"> Rounded buttons</h2>
+            <button class="btn btn-primary rounded"> primary</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-dark rounded"> dark</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-warning rounded"> warning</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-danger rounded"> danger</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-indigo rounded"> indigo</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-purple rounded"> purple</button>
+        </div>
+
+
     </div>
 </body>
 </html>
