--- a/src/buttons.html
+++ b/src/buttons.html
@@ -17,6 +17,8 @@
             &nbsp;&nbsp;
             <button class="btn btn-warning"> warning</button>
             &nbsp;&nbsp;
+            <button class="btn btn-success"> success</button>
+            &nbsp;&nbsp;
             <button class="btn btn-danger"> danger</button>
             &nbsp;&nbsp;
             <button class="btn btn-indigo"> indigo</button>
@@ -34,6 +36,8 @@
             &nbsp;&nbsp;
             <button class="btn btn-warning rounded"> warning</button>
             &nbsp;&nbsp;
+            <button class="btn btn-success rounded"> success</button>
+            &nbsp;&nbsp;
             <button class="btn btn-danger rounded"> danger</button>
             &nbsp;&nbsp;
             <button class="btn btn-indigo rounded"> indigo</button>
@@ -41,6 +45,24 @@
             <button class="btn btn-purple rounded"> purple</button>
         </div>
 
+         <!-- shadow buttons -->
+
+        <div class="border-b pb-5 mt-5">
+            <h2 class="capitalize text-base mb-4"> shadow buttons</h2>
+            <button class="btn btn-primary rounded primary-shadow"> primary</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-dark rounded dark-shadow"> dark</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-warning rounded warning-shadow"> warning</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-success rounded success-shadow"> success</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-danger rounded danger-shadow"> danger</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-indigo rounded indigo-shadow"> indigo</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-purple rounded purple-shadow"> purple</button>
+        </div>
 
     </div>
 </body>
