--- a/src/buttons.html
+++ b/src/buttons.html
@@ -11,38 +11,38 @@
     <div class="max-w-screen-xl mx-auto my-20">
         <div class="border-b pb-5">
             <h2 class="capitalize text-base mb-4">buttons</h2>
-            <button class="btn btn-primary"> primary</button>
+            <button class="btn btn-primary primary-ring"> primary</button>
             &nbsp;&nbsp;
-            <button class="btn btn-dark"> dark</button>
+            <button class="btn btn-dark dark-ring"> dark</button>
             &nbsp;&nbsp;
-            <button class="btn btn-warning"> warning</button>
+            <button class="btn btn-warning warning-ring"> warning</button>
             &nbsp;&nbsp;
-            <button class="btn btn-success"> success</button>
+            <button class="btn btn-success success-ring"> success</button>
             &nbsp;&nbsp;
-            <button class="btn btn-danger"> danger</button>
+            <button class="btn btn-danger danger-ring "> danger</button>
             &nbsp;&nbsp;
-            <button class="btn btn-indigo"> indigo</button>
+            <button class="btn btn-indigo indigo-ring"> indigo</button>
             &nbsp;&nbsp;
-            <button class="btn btn-purple"> purple</button>
+            <button class="btn btn-purple purple-ring"> purple</button>
         </div>
 
         <!-- Rounded buttons -->
 
         <div class="border-b pb-5 mt-5">
             <h2 class="capitalize text-base mb-4"> Rounded buttons</h2>
-            <button class="btn btn-primary rounded"> primary</button>
+            <button class="btn btn-primary rounded primary-ring"> primary</button>
             &nbsp;&nbsp;
-            <button class="btn btn-dark rounded"> dark</button>
+            <button class="btn btn-dark rounded dark-ring"> dark</button>
             &nbsp;&nbsp;
-            <button class="btn btn-warning rounded"> warning</button>
+            <button class="btn btn-warning rounded warning-ring"> warning</button>
             &nbsp;&nbsp;
-            <button class="btn btn-success rounded"> success</button>
+            <button class="btn btn-success rounded success-ring"> success</button>
             &nbsp;&nbsp;
-            <button class="btn btn-danger rounded"> danger</button>
+            <button class="btn btn-danger rounded danger-ring"> danger</button>
             &nbsp;&nbsp;
-            <button class="btn btn-indigo rounded"> indigo</button>
+            <button class="btn btn-indigo rounded indigo-ring"> indigo</button>
             &nbsp;&nbsp;
-            <button class="btn btn-purple rounded"> purple</button>
+            <button class="btn btn-purple rounded purple-ring"> purple</button>
         </div>
 
          <!-- shadow buttons -->
