--- a/src/buttons.html
+++ b/src/buttons.html
@@ -64,6 +64,26 @@
             <button class="btn btn-purple rounded purple-shadow"> purple</button>
         </div>
 
+        <!-- Material buttons -->
+
+        <div class="border-b pb-5 mt-5">
+            <h2 class="capitalize text-base mb-4"> Material buttons</h2>
+            <button class="btn btn-primary rounded material"> primary</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-dark rounded material"> dark</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-warning rounded material"> warning</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-success rounded material"> success</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-danger rounded material"> danger</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-indigo rounded material"> indigo</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-purple rounded material"> purple</button>
+        </div>
+
+
     </div>
 </body>
 </html>
