--- a/src/buttons.html
+++ b/src/buttons.html
@@ -82,7 +82,24 @@
             &nbsp;&nbsp;
             <button class="btn btn-purple rounded material"> purple</button>
         </div>
+ <!-- Sweet buttons -->
 
+        <div class="border-b pb-5 mt-5">
+            <h2 class="capitalize text-base mb-4"> Sweet buttons</h2>
+            <button class="btn sweet-primary"> primary</button>
+            &nbsp;&nbsp;
+            <button class="btn sweet-dark"> dark</button>
+            &nbsp;&nbsp;
+            <button class="btn sweet-warning"> warning</button>
+            &nbsp;&nbsp;
+            <button class="btn sweet-success"> success</button>
+            &nbsp;&nbsp;
+            <button class="btn sweet-danger"> danger</button>
+            &nbsp;&nbsp;
+            <button class="btn sweet-indigo"> indigo</button>
+            &nbsp;&nbsp;
+            <button class="btn sweet-purple"> purple</button>
+        </div>
 
     </div>
 </body>
