--- a/src/buttons.html
+++ b/src/buttons.html
@@ -100,6 +100,24 @@
             &nbsp;&nbsp;
             <button class="btn sweet-purple"> purple</button>
         </div>
+        <!-- Outline buttons -->
+
+        <div class="border-b pb-5 mt-5">
+            <h2 class="capitalize text-base mb-4"> Outline buttons</h2>
+            <button class="btn outline-primary rounded primary-ring "> primary</button>
+            &nbsp;&nbsp;
+            <button class="btn outline-dark rounded dark-ring"> dark</button>
+            &nbsp;&nbsp;
+            <button class="btn outline-warning rounded warning-ring"> warning</button>
+            &nbsp;&nbsp;
+            <button class="btn outline-success rounded success-ring"> success</button>
+            &nbsp;&nbsp;
+            <button class="btn outline-danger rounded danger-ring">danger</button> 
+            &nbsp;&nbsp;
+            <button class="btn outline-indigo rounded indigo-ring"> indigo</button>
+            &nbsp;&nbsp;
+            <button class="btn outline-purple rounded purple-ring"> purple</button>
+        </div>
 
     </div>
 </body>
