--- a/src/buttons.html
+++ b/src/buttons.html
@@ -119,6 +119,24 @@
             <button class="btn outline-purple rounded purple-ring"> purple</button>
         </div>
 
+         <!-- Smart buttons -->
+
+        <div class="border-b pb-5 mt-5">
+            <h2 class="capitalize text-base mb-4"> Smart buttons</h2>
+            <button class="btn smart-primary rounded primary-ring "> primary</button>
+            &nbsp;&nbsp;
+            <button class="btn smart-dark rounded dark-ring"> dark</button>
+            &nbsp;&nbsp;
+            <button class="btn smart-warning rounded warning-ring"> warning</button>
+            &nbsp;&nbsp;
+            <button class="btn smart-success rounded success-ring"> success</button>
+            &nbsp;&nbsp;
+            <button class="btn smart-danger rounded danger-ring">danger</button> 
+            &nbsp;&nbsp;
+            <button class="btn smart-indigo rounded indigo-ring"> indigo</button>
+            &nbsp;&nbsp;
+            <button class="btn smart-purple rounded purple-ring"> purple</button>
+        </div>
     </div>
 </body>
 </html>
