--- a/src/buttons.html
+++ b/src/buttons.html
@@ -137,6 +137,26 @@
             &nbsp;&nbsp;
             <button class="btn smart-purple rounded purple-ring"> purple</button>
         </div>
+
+
+           <!-- gradient buttons -->
+
+        <div class="border-b pb-5 mt-5">
+            <h2 class="capitalize text-base mb-4"> gradient buttons</h2>
+            <button class="btn gradient-primary rounded primary-ring "> primary</button>
+            &nbsp;&nbsp;
+            <button class="btn gradient-dark rounded dark-ring"> dark</button>
+            &nbsp;&nbsp;
+            <button class="btn gradient-warning rounded warning-ring"> warning</button>
+            &nbsp;&nbsp;
+            <button class="btn gradient-success rounded success-ring"> success</button>
+            &nbsp;&nbsp;
+            <button class="btn gradient-danger rounded danger-ring">danger</button> 
+            &nbsp;&nbsp;
+            <button class="btn gradient-indigo rounded indigo-ring"> indigo</button>
+            &nbsp;&nbsp;
+            <button class="btn gradient-purple rounded purple-ring"> purple</button>
+        </div>
     </div>
 </body>
 </html>
