--- a/src/buttons.html
+++ b/src/buttons.html
@@ -157,6 +157,36 @@
             &nbsp;&nbsp;
             <button class="btn gradient-purple rounded purple-ring"> purple</button>
         </div>
+
+         <!-- Loading buttons -->
+
+         <div class="border-b pb-5 mt-5">
+            <h2 class="capitalize text-base mb-4"> Loading buttons</h2>
+            <button class="btn btn-primary rounded primary-ring "> 
+                <span class="spinner"></span>
+            </button>
+            &nbsp;&nbsp;
+            <button class="btn btn-dark rounded dark-ring">
+                 <span class="spinner"></span></button>
+            &nbsp;&nbsp;
+            <button class="btn btn-warning rounded warning-ring">
+                 <span class="spinner"></span></button>
+            &nbsp;&nbsp;
+            <button class="btn btn-success rounded success-ring">
+                 <span class="spinner"></span></button>
+            &nbsp;&nbsp;
+            <button class="btn btn-danger rounded danger-ring">
+                <span class="spinner"></span>
+            </button> 
+            &nbsp;&nbsp;
+            <button class="btn btn-indigo rounded indigo-ring"> 
+                <span class="spinner"></span>
+            </button>
+            &nbsp;&nbsp;
+            <button class="btn btn-purple rounded purple-ring"> 
+                <span class="spinner"></span>
+            </button>
+        </div>
     </div>
 </body>
 </html>
