--- a/src/buttons.html
+++ b/src/buttons.html
@@ -187,6 +187,27 @@
                 <span class="spinner"></span>
             </button>
         </div>
+
+
+         <!-- Block buttons -->
+
+         <div class="border-b pb-5 mt-5">
+            <h2 class="capitalize text-base mb-4"> Block buttons</h2>
+            <button class="btn btn-primary rounded primary-ring btn-block"> primary</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-dark rounded dark-ring btn-block"> dark</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-warning rounded warning-ring btn-block"> warning</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-success rounded success-ring btn-block"> success</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-danger rounded danger-ring btn-block"> danger</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-indigo rounded indigo-ring btn-block"> indigo</button>
+            &nbsp;&nbsp;
+            <button class="btn btn-purple rounded purple-ring btn-block"> purple</button>
+        </div>
+
     </div>
 </body>
 </html>
