buttons container responsive

--- a/src/buttons.html
+++ b/src/buttons.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <div class="max-w-screen-xl mx-auto my-20">
-        <div class="border-b pb-5">
+    <div class="max-w-screen-xl mx-auto my-20 px-5">
+        <div class="border-b pb-5 buttons-container">
             <h2 class="capitalize text-base mb-4">buttons</h2>
-            <button class="btn btn-primary primary-ring"> primary</button>
+            <a href="#" class="btn btn-primary primary-ring"> primary</a>
             &nbsp;&nbsp;
-            <button class="btn btn-dark dark-ring"> dark</button>
+            <input type="submit" class="btn btn-dark dark-ring" value="dark"/> 
             &nbsp;&nbsp;
             <button class="btn btn-warning warning-ring"> warning</button>
             &nbsp;&nbsp;
@@ -28,7 +28,7 @@
 
         <!-- Rounded buttons -->
 
-        <div class="border-b pb-5 mt-5">
+        <div class="border-b pb-5 mt-5 buttons-container">
             <h2 class="capitalize text-base mb-4"> Rounded buttons</h2>
             <button class="btn btn-primary rounded primary-ring"> primary</button>
             &nbsp;&nbsp;
@@ -47,7 +47,7 @@
 
          <!-- shadow buttons -->
 
-        <div class="border-b pb-5 mt-5">
+        <div class="border-b pb-5 mt-5 buttons-container">
             <h2 class="capitalize text-base mb-4"> shadow buttons</h2>
             <button class="btn btn-primary rounded primary-shadow"> primary</button>
             &nbsp;&nbsp;
@@ -66,7 +66,7 @@
 
         <!-- Material buttons -->
 
-        <div class="border-b pb-5 mt-5">
+        <div class="border-b pb-5 mt-5 buttons-container">
             <h2 class="capitalize text-base mb-4"> Material buttons</h2>
             <button class="btn btn-primary rounded material"> primary</button>
             &nbsp;&nbsp;
@@ -84,7 +84,7 @@
         </div>
  <!-- Sweet buttons -->
 
-        <div class="border-b pb-5 mt-5">
+        <div class="border-b pb-5 mt-5 buttons-container">
             <h2 class="capitalize text-base mb-4"> Sweet buttons</h2>
             <button class="btn sweet-primary"> primary</button>
             &nbsp;&nbsp;
@@ -102,7 +102,7 @@
         </div>
         <!-- Outline buttons -->
 
-        <div class="border-b pb-5 mt-5">
+        <div class="border-b pb-5 mt-5 buttons-container">
             <h2 class="capitalize text-base mb-4"> Outline buttons</h2>
             <button class="btn outline-primary rounded primary-ring "> primary</button>
             &nbsp;&nbsp;
@@ -121,7 +121,7 @@
 
          <!-- Smart buttons -->
 
-        <div class="border-b pb-5 mt-5">
+        <div class="border-b pb-5 mt-5 buttons-container">
             <h2 class="capitalize text-base mb-4"> Smart buttons</h2>
             <button class="btn smart-primary rounded primary-ring "> primary</button>
             &nbsp;&nbsp;
@@ -141,7 +141,7 @@
 
            <!-- gradient buttons -->
 
-        <div class="border-b pb-5 mt-5">
+        <div class="border-b pb-5 mt-5 buttons-container">
             <h2 class="capitalize text-base mb-4"> gradient buttons</h2>
             <button class="btn gradient-primary rounded primary-ring "> primary</button>
             &nbsp;&nbsp;
@@ -160,7 +160,7 @@
 
          <!-- Loading buttons -->
 
-         <div class="border-b pb-5 mt-5">
+         <div class="border-b pb-5 mt-5 buttons-container">
             <h2 class="capitalize text-base mb-4"> Loading buttons</h2>
             <button class="btn btn-primary rounded primary-ring "> 
                 <span class="spinner"></span>
@@ -191,7 +191,7 @@
 
          <!-- Block buttons -->
 
-         <div class="border-b pb-5 mt-5">
+         <div class="border-b pb-5 mt-5 buttons-container">
             <h2 class="capitalize text-base mb-4"> Block buttons</h2>
             <button class="btn btn-primary rounded primary-ring btn-block"> primary</button>
             &nbsp;&nbsp;
