--- a/src/alerts.html
+++ b/src/alerts.html
@@ -11,11 +11,41 @@
     <div class="max-w-screen-xl mx-auto py-5 px-6">
         <div>
             <h1 class="text-base capitalize">simple alerts</h1>
-            <div class="w-full p-5">
-                <div class="alert alert-success">
-                    <div class="flex">
-                        <span class="inline-block mr-3" > success</span>
-                        <p>Congratulations your accoount haw created successfully</p>
+            <div class="flex flex-wrap -mx-5">
+                <div class="w-full md:w-6/12 p-5">
+                    <div class="alert alert-success">
+                        <div class="flex">
+                            <span class="inline-block mr-3" > success</span>
+                            <p>Congratulations your accoount haw created successfully</p>
+                        </div>
+                        <i class="bi bi-x alert-close"></i>
+                    </div>
+                </div>
+                <div class="w-full md:w-6/12 p-5">
+                    <div class="alert alert-danger rounded beautify-danger">
+                        <div class="flex">
+                            <span class="inline-block mr-3" > danger</span>
+                            <p>Congratulations your accoount haw created successfully</p>
+                        </div>
+                        <i class="bi bi-x alert-close"></i>
+                    </div>
+                </div>
+                <div class="w-full md:w-6/12 p-5">
+                    <div class="alert alert-warning rounded beautify-warning">
+                        <div class="flex">
+                            <span class="inline-block mr-3" > warning</span>
+                            <p>Congratulations your accoount haw created successfully</p>
+                        </div>
+                        <i class="bi bi-x alert-close"></i>
+                    </div>
+                </div>
+                <div class="w-full md:w-6/12 p-5">
+                    <div class="alert alert-primary rounded beautify-primary">
+                        <div class="flex">
+                            <span class="inline-block mr-3" > primary</span>
+                            <p>Congratulations your accoount haw created successfully</p>
+                        </div>
+                        <i class="bi bi-x alert-close"></i>
                     </div>
                 </div>
             </div>
