--- a/src/alerts.html
+++ b/src/alerts.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div class="w-full md:w-6/12 p-5">
-                    <div class="alert alert-danger rounded beautify-danger">
+                    <div class="alert alert-danger  beautify-danger">
                         <div class="flex">
                             <span class="inline-block mr-3" > danger</span>
                             <p>Congratulations your accoount haw created successfully</p>
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="w-full md:w-6/12 p-5">
-                    <div class="alert alert-warning rounded beautify-warning">
+                    <div class="alert alert-warning  beautify-warning">
                         <div class="flex">
                             <span class="inline-block mr-3" > warning</span>
                             <p>Congratulations your accoount haw created successfully</p>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="w-full md:w-6/12 p-5">
-                    <div class="alert alert-primary rounded beautify-primary">
+                    <div class="alert alert-primary beautify-primary">
                         <div class="flex">
                             <span class="inline-block mr-3" > primary</span>
                             <p>Congratulations your accoount haw created successfully</p>
@@ -48,6 +48,48 @@
                         <i class="bi bi-x alert-close"></i>
                     </div>
                 </div>
+            </div>
+        </div>
+            <div class ="mt-10">
+            <h1 class="text-base capitalize"> rounded alerts</h1>
+            <div class="flex flex-wrap -mx-5">
+                <div class="w-full md:w-6/12 p-5">
+                    <div class="alert alert-success rounded">
+                        <div class="flex">
+                            <span class="inline-block mr-3" > success</span>
+                            <p>Congratulations your accoount haw created successfully</p>
+                        </div>
+                        <i class="bi bi-x alert-close"></i>
+                    </div>
+                </div>
+                <div class="w-full md:w-6/12 p-5">
+                    <div class="alert alert-warning rounded ">
+                        <div class="flex">
+                            <span class="inline-block mr-3" > warning</span>
+                            <p>Congratulations your accoount haw created successfully</p>
+                        </div>
+                        <i class="bi bi-x alert-close"></i>
+                    </div>
+                </div>
+                <div class="w-full md:w-6/12 p-5">
+                    <div class="alert alert-danger rounded">
+                        <div class="flex">
+                            <span class="inline-block mr-3" > danger</span>
+                            <p>Congratulations your accoount haw created successfully</p>
+                        </div>
+                        <i class="bi bi-x alert-close"></i>
+                    </div>
+                </div>
+                <div class="w-full md:w-6/12 p-5">
+                    <div class="alert alert-primary rounder">
+                        <div class="flex">
+                            <span class="inline-block mr-3" > primary</span>
+                            <p>Congratulations your accoount haw created successfully</p>
+                        </div>
+                        <i class="bi bi-x alert-close"></i>
+                    </div>
+                </div>
+            </div>
             </div>
         </div>
     </div>
