--- a/src/alerts.html
+++ b/src/alerts.html
@@ -18,20 +18,18 @@
                             <span class="inline-block mr-3" > success</span>
                             <p>Congratulations your accoount haw created successfully</p>
                         </div>
-                        <i class="bi bi-x alert-close"></i>
                     </div>
                 </div>
                 <div class="w-full md:w-6/12 p-5">
-                    <div class="alert alert-danger  beautify-danger">
+                    <div class="alert alert-danger">
                         <div class="flex">
                             <span class="inline-block mr-3" > danger</span>
                             <p>Congratulations your accoount haw created successfully</p>
                         </div>
-                        <i class="bi bi-x alert-close"></i>
                     </div>
                 </div>
                 <div class="w-full md:w-6/12 p-5">
-                    <div class="alert alert-warning  beautify-warning">
+                    <div class="alert alert-warning">
                         <div class="flex">
                             <span class="inline-block mr-3" > warning</span>
                             <p>Congratulations your accoount haw created successfully</p>
@@ -40,12 +38,11 @@
                     </div>
                 </div>
                 <div class="w-full md:w-6/12 p-5">
-                    <div class="alert alert-primary beautify-primary">
+                    <div class="alert alert-primary">
                         <div class="flex">
                             <span class="inline-block mr-3" > primary</span>
                             <p>Congratulations your accoount haw created successfully</p>
                         </div>
-                        <i class="bi bi-x alert-close"></i>
                     </div>
                 </div>
             </div>
@@ -90,9 +87,47 @@
                     </div>
                 </div>
             </div>
+            </div>    
+        
+        <div class="mt-10">
+            <h1 class="text-base capitalize">beautify alerts</h1>
+            <div class="flex flex-wrap -mx-5">
+                <div class="w-full md:w-6/12 p-5">
+                    <div class="alert alert-success rounder beautify-success">
+                        <div class="flex">
+                            <span class="inline-block mr-3"> Success</span>
+                            <p>Congratulations your accoount haw created successfully</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full md:w-6/12 p-5">
+                    <div class="alert alert-danger rounder beautify-danger">
+                        <div class="flex">
+                            <span class="inline-block mr-3"> danger</span>
+                            <p>Congratulations your accoount haw created successfully</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full md:w-6/12 p-5">
+                    <div class="alert alert-warning rounder beautify-warning">
+                        <div class="flex">
+                            <span class="inline-block mr-3"> warning</span>
+                            <p>Congratulations your accoount haw created successfully</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full md:w-6/12 p-5">
+                    <div class="alert alert-primary rounder beautify-primary">
+                        <div class="flex">
+                            <span class="inline-block mr-3"> primary</span>
+                            <p>Congratulations your accoount haw created successfully</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
-    <script src="./js/alerts.js"></script>
+    </div>
 </body>
 </html>
