--- a/src/alerts.html
+++ b/src/alerts.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alerts</title>
     <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
     <div class="max-w-screen-xl mx-auto py-5 px-6">
@@ -34,7 +35,6 @@
                             <span class="inline-block mr-3" > warning</span>
                             <p>Congratulations your accoount haw created successfully</p>
                         </div>
-                        <i class="bi bi-x alert-close"></i>
                     </div>
                 </div>
                 <div class="w-full md:w-6/12 p-5">
@@ -46,7 +46,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        
             <div class ="mt-10">
             <h1 class="text-base capitalize"> rounded alerts</h1>
             <div class="flex flex-wrap -mx-5">
@@ -56,7 +56,6 @@
                             <span class="inline-block mr-3" > success</span>
                             <p>Congratulations your accoount haw created successfully</p>
                         </div>
-                        <i class="bi bi-x alert-close"></i>
                     </div>
                 </div>
                 <div class="w-full md:w-6/12 p-5">
@@ -65,7 +64,6 @@
                             <span class="inline-block mr-3" > warning</span>
                             <p>Congratulations your accoount haw created successfully</p>
                         </div>
-                        <i class="bi bi-x alert-close"></i>
                     </div>
                 </div>
                 <div class="w-full md:w-6/12 p-5">
@@ -74,7 +72,6 @@
                             <span class="inline-block mr-3" > danger</span>
                             <p>Congratulations your accoount haw created successfully</p>
                         </div>
-                        <i class="bi bi-x alert-close"></i>
                     </div>
                 </div>
                 <div class="w-full md:w-6/12 p-5">
@@ -83,7 +80,7 @@
                             <span class="inline-block mr-3" > primary</span>
                             <p>Congratulations your accoount haw created successfully</p>
                         </div>
-                        <i class="bi bi-x alert-close"></i>
+                        
                     </div>
                 </div>
             </div>
@@ -127,6 +124,48 @@
 
             </div>
         </div>
+    </div>
+    <div class="mt-10">
+        <h1 class="text-base capitalize">alerts with closae option</h1>
+        <div class="flex flex-wrap -mx-5">
+        <div class="w-full md:w-6/12 p-5">
+            <div class="alert alert-success rounder beautify-success">
+                <div class="flex">
+                    <span class="inline-block mr-3"> success</span>
+                    <p>Congratulations your accoount haw created successfully</p>
+                </div>
+                <i class="bi bi-x alert-close"></i>
+            </div>
+        </div>
+        <div class="w-full md:w-6/12 p-5">
+            <div class="alert alert-danger rounder beautify-danger">
+                <div class="flex">
+                    <span class="inline-block mr-3"> danger</span>
+                    <p>Congratulations your accoount haw created successfully</p>
+                </div>
+                <i class="bi bi-x alert-close"></i>
+            </div>
+        </div>
+        <div class="w-full md:w-6/12 p-5">
+            <div class="alert alert-warning rounder beautify-warning">
+                <div class="flex">
+                    <span class="inline-block mr-3"> warning</span>
+                    <p>Congratulations your accoount haw created successfully</p>
+                </div>
+                <i class="bi bi-x alert-close"></i>
+            </div>
+        </div>
+        <div class="w-full md:w-6/12 p-5">
+            <div class="alert alert-primary rounder beautify-primary">
+                <div class="flex">
+                    <span class="inline-block mr-3"> primary</span>
+                    <p>Congratulations your accoount haw created successfully</p>
+                </div>
+                <i class="bi bi-x alert-close"></i>
+            </div>
+        </div>
+    </div>
+    </div>
     </div>
     </div>
 </body>
