--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
+    <header class="header">
+        <div class="container relative">
+            <a href="index.html" class="logo">
+                <img src="./images/logo.png" alt="logo" class="logo-img">    
+            </a>
+        </div>
+    </header>
+
+    <!--close header-->
+
     <nav class="nav">
         <div class="nav-container">
+            <i class="bi bi-x-lg nav-close"></i>
             <ul class="nav-ul">
                 <li> <a href="" class="nav-link">Home</a></li>
                 <li> <a href="" class="nav-link">categories</a></li>
@@ -16,11 +29,8 @@
                 <li> <a href="" class="nav-link">pricing</a></li>
                 <li> <a href="" class="nav-link">testimonials</a></li>
                 <li> <a href="" class="nav-link">download app</a></li>
-
             </ul>
-
         </div>
-
     </nav>
 </body>
 </html>
