--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
+    <span class="nav-open"> 
+        <i class="bi bi-justify-left text-white text-lg" ></i>
+    </span>
     <header class="header">
         <div class="container relative">
             <a href="index.html" class="logo">
-                <img src="./images/logo.png" alt="logo" class="logo-img">    
+                <img src="#" alt="logo" class="logo-img">    
             </a>
         </div>
     </header>
