--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,15 @@
     <header class="header">
         <div class="container relative">
             <a href="index.html" class="logo">
-                <img src="#" alt="logo" class="logo-img">    
+                <img src="#" alt="logo" class="image-cover">    
             </a>
+            <div class="row items-center pt-28 xl:pt-20 -ml-5">
+                <div class="header-left-col">
+                    <h4 class="header-badge">drink, food &enjoy!</h4>
+
+                </div>
+
+            </div>
         </div>
     </header>
 
