--- a/src/index.html
+++ b/src/index.html
@@ -42,5 +42,25 @@
             </ul>
         </div>
     </nav>
+    <!-- close nav -->
+    <section class="category">
+     <div class="container">
+        <h1 class="heading"> categories</h1>
+        <div class="row">
+            <div class="w-full p-3">
+                <a href="#" class="categoe-block">
+                    <img src="./images/pexels-jane-doan-1099680.jpg" alt="category img" class="image-cover">
+                <div class="category-layer">
+                    <span class="category-name">cake</span>
+                </div>
+                </a>
+            </div>
+        
+
+        </div>
+     </div>   
+    </section>
+    <!-- close category-->
+    <script src="./js/script.js"></script>
 </body>
 </html>
