--- a/src/index.html
+++ b/src/index.html
@@ -48,15 +48,13 @@
         <h1 class="heading"> categories</h1>
         <div class="row">
             <div class="w-full p-3">
-                <a href="#" class="categoe-block">
+                <a href="#" class="category-block">
                     <img src="./images/pexels-jane-doan-1099680.jpg" alt="category img" class="image-cover">
                 <div class="category-layer">
                     <span class="category-name">cake</span>
                 </div>
                 </a>
             </div>
-        
-
         </div>
      </div>   
     </section>
