--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
      <div class="container">
         <h1 class="heading"> categories</h1>
         <div class="row -mx-3">
-            <div class="w-full sm:w-6/12 md:w-4/12 lg:w-3/12 xm:w-[20%] p-3">
+            <div class="category-column">
                 <a href="#" class="category-block">
                     <img src="./images/pexels-jane-doan-1099680.jpg" alt="category img" class="image-cover">
                 <div class="category-layer">
@@ -55,7 +55,7 @@
                 </div>
                 </a>
             </div>
-            <div class="w-full sm:w-6/12 md:w-4/12 lg:w-3/12 xm:w-[20%] p-3">
+            <div class="category-column">
                 <a href="#" class="category-block">
                     <img src="./images/pexels-rajesh-tp-1633578.jpg" alt="category img" class="image-cover">
                 <div class="category-layer">
@@ -63,7 +63,7 @@
                 </div>
                 </a>
             </div>
-            <div class="w-full sm:w-6/12 md:w-4/12 lg:w-3/12 xm:w-[20%] p-3">
+            <div class="category-column">
                 <a href="#" class="category-block">
                     <img src="./images/pexels-ash-376464.jpg" alt="category img" class="image-cover">
                 <div class="category-layer">
@@ -71,7 +71,7 @@
                 </div>
                 </a>
             </div>
-            <div class="w-full sm:w-6/12 md:w-4/12 lg:w-3/12 xm:w-[20%] p-3">
+            <div class="category-column">
                 <a href="#" class="category-block">
                     <img src="./images/pexels-abhinav-goswami-291528.jpg" alt="category img" class="image-cover">
                 <div class="category-layer">
@@ -79,7 +79,7 @@
                 </div>
                 </a>
             </div>
-            <div class="w-full sm:w-6/12 md:w-4/12 lg:w-3/12 xm:w-[20%] p-3">
+            <div class="category-column">
                 <a href="#" class="category-block">
                     <img src="./images/pexels-rajesh-tp-1633525.jpg" alt="category img" class="image-cover">
                 <div class="category-layer">
