style pricing card

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,22 @@
      </div>   
     </section>
     <!-- close category-->
+    <section class="pricing">
+        <div class="container">
+            <h1 class="heading text-center">pricing</h1>
+            <div class="row justify-center -mx-6">
+                <div class="pricing-card">
+                    <h3 class="pricing-heading my-2">monthly</h3>
+                    <div class="text-center my-2">
+                        <span class="pricing-sign">$</span>
+                        <span class="pricing-price">299</span>
+                    </div>
+                    <p class="pricing-message"> $299 per month, access limited foods.</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
     <script src="./js/script.js"></script>
 </body>
 </html>
