lightbox with js

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
             <div class="category-column">
                 <a href="#" class="category-block">
                     <img src="./images/pexels-rajesh-tp-1633525.jpg" alt="category img" class="image-cover">
-                <div class="category-layer">
+                <div class="category-layer" id="gallery">
                     <span class="category-name">sandwich</span>
                 </div>
                 </a>
@@ -107,6 +107,14 @@
         </div>
 
     </section>
+
+    <section class="lightbox">
+        <div class="lightbox-ody">
+
+        </div>
+
+    </section>
+    <!-- close lightbox -->
     <script src="./js/script.js"></script>
 </body>
 </html>
