--- a/src/index.html
+++ b/src/index.html
@@ -81,8 +81,8 @@
             </div>
             <div class="category-column">
                 <a href="#" class="category-block">
-                    <img src="./images/pexels-rajesh-tp-1633525.jpg" alt="category img" class="image-cover">
-                <div class="category-layer" id="gallery">
+                    <img src="./images/pexels-rajesh-tp-1633525.jpg" alt="category img" class="image-cover testimonials-gallery-img"  id="gallery">
+                <div class="category-layer">
                     <span class="category-name">sandwich</span>
                 </div>
                 </a>
@@ -91,6 +91,13 @@
      </div>   
     </section>
     <!-- close category-->
+    <div class="testimonials-gallery-col">
+        <div class="testimonials-gallery">
+            <img src="./images/pexels-abhinav-goswami-291528.jpg" alt="gallery" class="image-cover testimonials-gallery-img" id="gallery">
+
+        </div>
+    </div>
+    <!-- close testimonials-gallery-col -->
     <section class="pricing">
         <div class="container">
             <h1 class="heading text-center">pricing</h1>
@@ -108,13 +115,16 @@
 
     </section>
 
-    <section class="lightbox">
-        <div class="lightbox-ody">
-
+    <section class="lightbox" id="lightbox">
+        <div class="lightbox-body">
+            
         </div>
 
     </section>
+
     <!-- close lightbox -->
+
     <script src="./js/script.js"></script>
+    
 </body>
 </html>
